# plant-health

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: publish.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-19-e2e.txt
.sisyphus/notepads/plant-health/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: plant-health.md
backend/: .dockerignore  Dockerfile  pyproject.toml  seed.py
backend/src/: __init__.py  config.py  db.py  main.py  models.py  sse.py
backend/src/agents/: care_advisor.py  diagnosis.py  flow.py  sensor_analysis.py  web_research.py
backend/src/api/: analysis.py  health.py  plant.py  sensors.py  stream.py
backend/src/utils/: call_llm.py  prompts.py  search_web.py
docs/: api-reference.md  architecture.md  deployment.md  development.md  esp32-setup.md
firmware/plant_health_sensor/: plant_health_sensor.ino
frontend/: .env.production  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisCard.tsx  AnalysisHistory.tsx  ConnectionStatus.tsx  PlantConfig.tsx  SensorCard.tsx  SensorChart.tsx
frontend/src/hooks/: useSSE.ts  useSensorData.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx
infra/: docker-compose.yml
ppt/: index.html
